added go back link

--- a/seenunseen/chat.html
+++ b/seenunseen/chat.html
@@ -153,6 +153,9 @@
     <div class="container h-screen">
         <!-- Navigation panel -->
         <div class="navigation-container w-1/4 h-full">
+            
+            <p class="text-gray-600 p-2"><a class="text-blue-600" href="index.html"> Go to episode list</a></p>
+            <h2 class="text-2xl p-2">Highlights</h2>
           <aside class="h-screen top-0">
             <!-- Navigation links go here -->
 
@@ -166,7 +169,7 @@
             <!-- <h2 class="px-4"></h2> -->
             <div class="bg-yellow-100 border border-yellow-400 text-yellow-700 px-4 py-3 mb-4 rounded relative" role="alert">
                 <strong class="font-bold">Note:</strong>
-                <span class="block sm:inline">All transcripts and section headings were machine generated. At times they may be <b>incorrect</b> and <b>hallucinate information</b> not talked about 
+                <span class="block sm:inline">All transcripts and highlights were machine generated. At times they may be <b>incorrect</b> and <b>hallucinate information</b> not talked about 
                     in the podcast. Please use with caution.
                 </span>
             </div>
