--- a/seenunseen/index.html
+++ b/seenunseen/index.html
@@ -67,7 +67,7 @@
     <!-- <h2 class="px-4"></h2> -->
     <div class="bg-yellow-100 border border-yellow-400 text-yellow-700 px-4 py-3 mb-4 rounded relative" role="alert">
         <strong class="font-bold">Note:</strong>
-        <span class="block sm:inline">All transcripts and section headings were machine generated. At times they may be <b>incorrect</b> and <b>hallucinate information</b> not talked about 
+        <span class="block sm:inline">All transcripts and highlights were machine generated. At times they may be <b>incorrect</b> and <b>hallucinate information</b> not talked about 
             in the podcast. Please use with caution.
         </span>
     </div>
