--- a/seenunseen/chat.html
+++ b/seenunseen/chat.html
@@ -95,7 +95,7 @@
         $('.episode-description').html(episode_description)
         $('#date-published').text('Date published: ' + episode_date_published)
         // set the episode url
-        $('#episode-url').attr('href', episode_url)
+        $('.episode-url').attr('href', episode_url)
     });
 
     // read in the titles file for the episode
@@ -166,6 +166,7 @@
         <div class="content-container w-full overflow-y-auto  mx-auto p-4 bg-white rounded-lg shadow-lg ">
             <h1 class="episode-title text-2xl font-bold text-gray-800 mb-4"></h1>
             <p class="episode-description text-gray-700 mb-4"></p>
+            <p class="mb-4"><a class="episode-url text-blue-600">Link to original Audio</a></p>
             <!-- <h2 class="px-4"></h2> -->
             <div class="bg-yellow-100 border border-yellow-400 text-yellow-700 px-4 py-3 mb-4 rounded relative" role="alert">
                 <strong class="font-bold">Note:</strong>
