--- a/seenunseen/chat.html
+++ b/seenunseen/chat.html
@@ -109,9 +109,15 @@
     });
 
    $.getJSON(base_url_for_episode + epnum + '.json', function(data) {
+        multitude_count = 0
        $.each(data, function(i, f) {
           // f.time is string formatted like 'hh:mm:ss.sss'
           // make string time_small which is 'hh:mm:ss'
+
+          //check if f.message contains the substring 'multitude'
+            if (f.message.includes('multitude')) {
+                multitude_count += 1
+            }
         var time_small = f.time.slice(0,8)
 
         var alignment = 'ml-auto'
@@ -142,6 +148,9 @@
         //    $(tblRow).appendTo("#chat tbody");
      });
 
+     // set multitude count in html
+        $('.multitude-count').text(multitude_count)
+
    });
 
 });
@@ -166,7 +175,7 @@
         <div class="content-container w-full overflow-y-auto  mx-auto p-4 bg-white rounded-lg shadow-lg ">
             <h1 class="episode-title text-2xl font-bold text-gray-800 mb-4"></h1>
             <p class="episode-description text-gray-700 mb-4"></p>
-            <p class="mb-4"><a class="episode-url text-blue-600">Link to original Audio</a></p>
+            <p class="mb-4 text-gray-700">Multitudes contained: <span class='multitude-count text-red-600'></span> &nbsp;<a class="episode-url text-blue-600">Link to original Audio</a></p>
             <!-- <h2 class="px-4"></h2> -->
             <div class="bg-yellow-100 border border-yellow-400 text-yellow-700 px-4 py-3 mb-4 rounded relative" role="alert">
                 <strong class="font-bold">Note:</strong>
