--- a/seenunseen/index.html
+++ b/seenunseen/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <title>SeenUnseen Transcriptions</title>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"> </script>
 <script src="https://cdn.tailwindcss.com"></script>
 <link rel="stylesheet" href="style.css">
